--- a/index.html
+++ b/index.html
@@ -115,6 +115,37 @@
         </div>
         <!-- ________ *TEMPLATE* Contributor card END ________  -->
 
+        <!-- ________ Keval Gothi's card START ________  -->
+        <div class="card">
+          <p class="name">Keval Gothi</p>
+          <p class="contact">
+            <i class="fab fa-x-twitter"></i>
+            <a href="https://x.com/Kevalgothi" target="_blank">KevalGothi</a>
+            <i class="fab fa-github"></i>
+            <a href="https://www.github.com/kevalGothi" target="_blank">kevalGothi</a>
+          </p>
+          <p class="about">About Me I wanna be FAMOUS!</p>
+          <div class="resources">
+            <p>3 Useful Dev Resources</p>
+            <ul>
+              <li>
+                <a href="https://www.youtube.com/@chaiaurcode" target="_blank" 
+                title="Chai Aur Code">Chai aur Code</a>
+              </li>
+              <li>
+                <a href="https://github.com/EbookFoundation/free-programming-books" 
+                target="_blank" 
+                title="Books">Progrmming books</a>
+              </li>
+              <li>
+                <a href="https://github.com/hkirat" target="_blank" 
+                title="A web3 devloper">Harkirat Singh</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+        <!-- ________ Keeval Gothi's card END ________  -->
+
         <!-- ________ Atharva Rasane's card START ________  -->
         <div class="card">
           <p class="name">Atharva Rasane</p>
