feat: add my contributor card to the inventory

--- a/index.html
+++ b/index.html
@@ -115,6 +115,41 @@
         </div>
         <!-- ________ *TEMPLATE* Contributor card END ________  -->
 
+        <!-- ________ Hanzala's card START ________  -->
+        <div class="card">
+          <p class="name">Muhammad Hanzla</p>
+          <p class="contact">
+            <i class="fab fa-github"></i>
+            <a href="https://www.github.com/hanzala-h" target="_blank">@hanzala-h</a>
+            <i class="fab fa-linkedin"></i>
+            <a href="https://www.linkedin.com/in/hanzala-h" target="_blank">hanzala-h</a>
+          </p>
+          <p class="about">Hey everyone! I'm a second-year AI student, an aspiring full-stack developer, and a self-taught programmer.</p>
+          <div class="resources">
+            <p>3 Useful Dev Resources</p>
+            <ul>
+              <li>
+                <a href="https://www.youtube.com/@sheryians" target="_blank" title="A coding bootcamp based in India">Sheryians Coding School</a>
+              </li>
+              <li>
+                <a href="https://developers.google.com/" target="_blank" title="Google's official resources for developers">
+                  <span style="color: #1A73E8;">G</span>
+                  <span style="color: #EA4335;">o</span>
+                  <span style="color: #FBBC04;">o</span>
+                  <span style="color: #1A73E8;">g</span>
+                  <span style="color: #34A853;">l</span>
+                  <span style="color: #EA4335;">e</span>
+                  for Developers
+                </a>
+              </li>
+              <li>
+                <a href="https://webpack.js.org/" target="_blank" title="A powerful JavaScript module bundler">Webpack (for the curious)</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+        <!-- ________ Hanzala's card END ________  -->
+
         <!-- ________ Atharva Rasane's card START ________  -->
         <div class="card">
           <p class="name">Atharva Rasane</p>
