--- a/index.html
+++ b/index.html
@@ -115,6 +115,34 @@
         </div>
         <!-- ________ *TEMPLATE* Contributor card END ________  -->
 
+                <!-- ________ DxRavage's Contributor card START ________  -->
+                <div class="card">
+                  <p class="name">DxRavage</p>
+                  <p class="contact">
+                    <i class="fab fa-x-twitter"></i>
+                    <a href="https://www.twitter.com/MarianoAvilaC" target="_blank">@MarianoAvilaC</a>
+                    <i class="fab fa-github"></i>
+                    <a href="https://www.github.com/DxRavage" target="_blank">DxRavage</a>
+                  </p>
+                  <p class="about">Hi! I'm a Software Engineering stundent </p>
+                  <div class="resources">
+                    <p>3 Useful Dev Resources</p>
+                    <ul>
+                      <li>
+                        <a href="https://roadmap.sh" target="_blank" title="First Resource">Guides for developers with educational content</a>
+                      </li>
+                      <li>
+                        <a href="https://responsively.app" target="_blank" title="Second Resource">Responsively: Desktop app usefull 
+                          for front end and responsive design</a>
+                      </li>
+                      <li>
+                        <a href="https://www.tailwindgen.com" target="_blank" title="Third resource">Tailwind Grid Generator</a>
+                      </li>
+                    </ul>
+                  </div>
+                </div>
+                <!-- ________ DxRavage's Contributor card END ________  -->
+
         <!-- ________ Hanzala's card START ________  -->
         <div class="card">
           <p class="name">Muhammad Hanzla</p>
