--- a/index.html
+++ b/index.html
@@ -115,6 +115,33 @@
         </div>
         <!-- ________ *TEMPLATE* Contributor card END ________  -->
 
+ <!-- ________ Abhishek Sharma's card START ________  -->
+        <div class="card">
+          <p class="name">Abhishek Sharma</p>
+          <p class="contact">
+            <i class="fab fa-linkedin"></i>
+            <a href="https://www.linkedin.com/in/abhishek-sharma-513248244/" target="_blank">Abhishek Sharma</a>
+            <i class="fab fa-github"></i>
+            <a href="https://www.github.com/Shaykoo" target="_blank">Abhishek Sharma</a>
+          </p>
+          <p class="about">I am a Full Stack developer with heavy focus on security and optimization of the app. I started contributing to Open Source from now.</p>
+          <div class="resources">
+            <p>3 Useful Dev Resources</p>
+            <ul>
+              <li>
+                <a href="https://www.producthunt.com" target="_blank" title="First Resource">Resource 1</a>
+              </li>
+              <li>
+                <a href="https://dribbble.com" target="_blank" title="Second Resource">Resource 2</a>
+              </li>
+              <li>
+                <a href="https://leetcode.com" target="_blank" title="Third resource">Resource 3</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+        <!-- ________ Abhishek Sharma's card ENDS ________  -->
+
         <!-- ________ Atharva Rasane's card START ________  -->
         <div class="card">
           <p class="name">Atharva Rasane</p>
