My first contribution to this project

--- a/index.html
+++ b/index.html
@@ -129,13 +129,13 @@
             <p>3 Useful Dev Resources</p>
             <ul>
               <li>
-                <a href="https://www.producthunt.com" target="_blank" title="First Resource">Resource 1</a>
+                <a href="https://techcrunch.com/" target="_blank" title="First Resource">Tech Crunch</a>
               </li>
               <li>
-                <a href="https://dribbble.com" target="_blank" title="Second Resource">Resource 2</a>
+                <a href="https://dribbble.com" target="_blank" title="Second Resource">Dribble</a>
               </li>
               <li>
-                <a href="https://leetcode.com" target="_blank" title="Third resource">Resource 3</a>
+                <a href="https://leetcode.com" target="_blank" title="Third resource">LeetCode</a>
               </li>
             </ul>
           </div>
