contribution to this repo

--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
                 <a href="https://techcrunch.com/" target="_blank" title="First Resource">Tech Crunch</a>
               </li>
               <li>
-                <a href="https://udemy.com" target="_blank" title="Second Resource">Udemy</a>
+                <a href="https://udemy.com" target="_blank" title="Second Resource">Udemy Learning Resources</a>
               </li>
               <li>
                 <a href="https://leetcode.com" target="_blank" title="Third resource">LeetCode</a>
