add my card information

--- a/index.html
+++ b/index.html
@@ -115,6 +115,33 @@
         </div>
         <!-- ________ *TEMPLATE* Contributor card END ________  -->
 
+        <!-- ________ JayShukla8's Contributor card START ________  -->
+        <div class="card">
+          <p class="name">Jay Shukla</p>
+          <p class="contact">
+            <i class="fab fa-x-twitter"></i>
+            <a href="https://www.twitter.com/userjay8" target="_blank">@userjay8</a>
+            <i class="fab fa-github"></i>
+            <a href="https://www.github.com/JayShukla8" target="_blank">JayShukla8</a>
+          </p>
+          <p class="about">Student curious about Open Sourcing!</p>
+          <div class="resources">
+            <p>3 Useful Dev Resources</p>
+            <ul>
+              <li>
+                <a href="https://www.geeksforgeeks.org/" target="_blank" title="First Resource">For concise DSA concepts explanations.</a>
+              </li>
+              <li>
+                <a href="https://leetcode.com/" target="_blank" title="Second Resource">For practicing coding.</a>
+              </li>
+              <li>
+                <a href="https://chat.openai.com/" target="_blank" title="Third resource">For any question that you want answered.</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+        <!-- ________ *TEMPLATE* Contributor card END ________  -->
+
         <!-- ________ DxRavage's Contributor card START ________  -->
         <div class="card">
           <p class="name">DxRavage</p>
