Add danielpatrascu02 card info

--- a/index.html
+++ b/index.html
@@ -115,6 +115,33 @@
         </div>
         <!-- ________ *TEMPLATE* Contributor card END ________  -->
 
+        <!-- ________ Daniel's Contributor card START ________  -->
+        <div class="card">
+          <p class="name">Daniel Patrascu</p>
+          <p class="contact">
+            <i class="fab fa-x-twitter"></i>
+            <a href="https://x.com/TheDanielsan" target="_blank">@TheDanielsan</a>
+            <i class="fab fa-github"></i>
+            <a href="https://github.com/danielpatrascu02" target="_blank">danielpatrascu02</a>
+          </p>
+          <p class="about">Hey! I started to enjoy making video games. Godot is a great game engine. I encourage everyone to give game development a try. It's fun!</p>
+          <div class="resources">
+            <p>3 Useful Dev Resources</p>
+            <ul>
+              <li>
+                <a href="https://godotengine.org/" target="_blank" title="First Resource">You can find Godot here</a>
+              </li>
+              <li>
+                <a href="https://www.linuxfoundation.org/" target="_blank" title="Second Resource">You should learn Linux</a>
+              </li>
+              <li>
+                <a href="https://www.piskelapp.com/" target="_blank" title="Third resource">For the pixel artists</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+        <!-- ________ Daniel's  Contributor card END ________  -->
+
         <!-- ________ DxRavage's Contributor card START ________  -->
         <div class="card">
           <p class="name">DxRavage</p>
