--- a/index.html
+++ b/index.html
@@ -114,7 +114,33 @@
           </div>
         </div>
         <!-- ________ *TEMPLATE* Contributor card END ________  -->
-
+        <!-- === Paste YOUR CARD directly BELOW this line ===-->
+        <!-- ________ NazTM Contributor card START ________  -->
+        <div class="card">
+          <p class="name">Naziba Tasnim</p>
+          <p class="contact">
+            <i class="fab fa-linkedin"></i>
+            <a href="https://www.linkedin.com/in/naziba-tasnim" target="_blank">naziba-tasnim</a>
+            <i class="fab fa-github"></i>
+            <a href="https://www.github.com/your_user_handle" target="_blank">NazTM</a>
+          </p>
+          <p class="about">Hi! I'm a student studying Computer Science and Engineering.</p>
+          <div class="resources">
+            <p>3 Useful Dev Resources</p>
+            <ul>
+              <li>
+                <a href="https://www.theodinproject.com/" target="_blank" title="The Odin Project">The Odin Project</a>
+              </li>
+              <li>
+                <a href="https://roadmap.sh/roadmaps" target="_blank" title="Roadmaps">Roadmaps</a>
+              </li>
+              <li>
+                <a href="https://www.youtube.com/@abdul_bari" target="_blank" title="Abdul Bari on YouTube">Abdul Bari on YouTube</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+        <!-- ________ NazTM Contributor card END ________  -->
         <!-- ________ DxRavage's Contributor card START ________  -->
         <div class="card">
           <p class="name">DxRavage</p>
