--- a/index.html
+++ b/index.html
@@ -115,6 +115,37 @@
         </div>
         <!-- ________ *TEMPLATE* Contributor card END ________  -->
 
+        <!-- ________ *TEMPLATE: GiovanniN98 Contributor card START ________  -->
+        <div class="card">
+          <p class="name">Giovanni N.</p>
+          <p class="contact">
+            <i class="fab fa-github"></i>
+            <a href="https://www.github.com/GiovanniN98" target="_blank">GiovanniN98</a>
+          </p>
+          <p class="about">Hi everyone, I'm Giovanni and I'm eager to contribute to meaningful projects!</p>
+          <div class="resources">
+            <p>3 Useful Dev Resources</p>
+            <ul>
+              <li>
+                <a href="https://streamlit.io/" target="_blank" title="Create a WebApp with no Frontend knowledge">      
+                  Streamlit
+                </a>
+              </li>
+              <li>
+                <a href="https://plotly.com/python/plotly-express/" target="_blank" title="Free and open-source visualization module for Python">
+                  Plotly Express
+                </a>
+              </li>
+              <li>
+                <a href="https://colab.research.google.com/" target="_blank" title="Write and execute python code in browser">
+                  Google Colab
+                </a>
+              </li>
+            </ul>
+          </div>
+        </div>
+        <!-- ________ GiovanniN98 Contributor card END ________  -->
+
         <!-- ________ Saqib's Contributor card START ________  -->
         <div class="card">
           <p class="name">Saqib Malik</p>
