--- a/index.html
+++ b/index.html
@@ -2131,6 +2131,36 @@
             </ul>
           </div>
         </div>
+        <!-- ________ pop Contributor card START ________  -->
+        <div class="card">
+          <p class="name">pop</p>
+          <p class="contact">
+            <i class="fab fa-x-twitter"></i>
+            <a href="https://www.twitter.com" target="_blank">@pop10110</a>
+            <i class="fab fa-github"></i>
+            <a href="https://www.github.com/vinay10110" target="_blank">vinay10110</a>
+          </p>
+          <p class="about">Hi! I'm a Software Engineering stundent</p>
+          <div class="resources">
+            <p>3 Useful Dev Resources</p>
+            <ul>
+              <li>
+                <a href="https://roadmap.sh" target="_blank" title="First Resource">
+                  Guides for developers with educational content
+                </a>
+              </li>
+              <li>
+                <a href="https://responsively.app" target="_blank" title="Second Resource">
+                  Responsively: Desktop app usefull for front end and responsive design
+                </a>
+              </li>
+              <li>
+                <a href="https://www.tailwindgen.com" target="_blank" title="Third resource">Tailwind Grid Generator</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+        <!-- ________ pop Contributor card END ________  -->
         <!-- ========= Card 12 START =========   -->
         <div class="card">
           <p class="name">Anirban</p>
