Add my card information

--- a/index.html
+++ b/index.html
@@ -88,6 +88,40 @@
         <!-- ==================  TEMPLATE  ================== -->
         <!-- DO NOT modify the TEMPLATE directly, make a copy and paste it below -->
 
+
+
+
+  <!-- ________ Blue's Contributor card START ________  -->
+  <div class="card">
+    <p class="name">Blue</p>
+    <p class="contact">
+      <i class="fab fa-github"></i>
+      <a href="https://github.com/51C80Y" target="_blank">51C80Y</a>
+    </p>
+    <p class="about">I am a Web Developer, still learning, made my first websites for family and firends, that involved lots of spaghetti code.</p>
+    <div class="resources">
+      <p>3 Useful Dev Resources</p>
+      <ul>
+        <li>
+          <a href="https://www.freecodecamp.org/" target="_blank" title="First Resource">
+            Freecodecamp
+          </a>
+        </li>
+        <li>
+          <a href="https://scrollrevealjs.org/" target="_blank" title="Second Resource">
+            w3schools
+          </a>
+        </li>
+        <li>
+          <a href="https://css-tricks.com/" target="_blank" title="Third resource">
+            Youtube
+          </a>
+        </li>
+      </ul>
+    </div>
+  </div>
+  <!-- ________ Blue's Contributor card END ________  -->
+
         <!-- ________ *TEMPLATE: MAKE A COPY* Contributor card START ________  -->
         <div class="card">
           <p class="name">Your name</p>
