--- a/index.html
+++ b/index.html
@@ -119,22 +119,22 @@
           <p class="name">Ashen Savinda</p>
           <p class="contact">
             <i class="fab fa-x-twitter"></i>
-            <a href="https://www.twitter.com/your_user_handle" target="_blank">ashensavi</a>
+            <a href="https://www.twitter.com/ashensavi" target="_blank">ashensavi</a>
             <i class="fab fa-github"></i>
-            <a href="https://www.github.com/your_user_handle" target="_blank">ashensavi</a>
+            <a href="https://www.github.com/ashensavi" target="_blank">ashensavi</a>
           </p>
           <p class="about">I'm a learning to be a full stack software developer. Coding is my passion.</p>
           <div class="resources">
             <p>3 Useful Dev Resources</p>
             <ul>
               <li>
-                <a href="https://stackoverflow.com/" target="_blank" title="First Resource">Stackoverflow</a>
+                <a href="https://stackoverflow.com/" target="_blank" title="Ideal for coding problems">Stackoverflow</a>
               </li>
               <li>
-                <a href="https://www.sololearn.com/en/" target="_blank" title="Second Resource">Sololearn</a>
+                <a href="https://www.sololearn.com/en/" target="_blank" title="Free structued courses with certificates">Sololearn</a>
               </li>
               <li>
-                <a href="https://www.w3schools.com/" target="_blank" title="Third resource">W3Schools</a>
+                <a href="https://www.w3schools.com/" target="_blank" title="Best for everyone">W3Schools</a>
               </li>
             </ul>
           </div>
