--- a/index.html
+++ b/index.html
@@ -17,6 +17,11 @@
   </head>
   <body>
     <div class="container">
+      <nav class="navbar">
+        <div class="logo"><img src="./codeforgelogo.jpg" alt="coding club logo" width="75px" height="75px">
+        <h2>CodeForge-NIAMT Ranchi</h2>
+        </div>
+      </nav>
       <div class="row">
         <div class="column">
           <!-- Night Mode Creation -->
