add-tanmay-name

--- a/index.html
+++ b/index.html
@@ -143,6 +143,35 @@
           </div>
         </div>
         <!-- lhcee3's Contributor card END-->
+         <!-- ________ tanmay  Contributor card START ________  -->
+        <div class="card">
+          <p class="name">Tanmay ghosh</p>
+          <p class="contact">
+            <i class="fab fa-x-linkedin"></i>
+            <a href="https://www.linkedin.com/posts/tanmay-ghosh-ab71952b6_made-a-data-visualizer-with-the-help-of-pandas-activity-7250422072844124160-bo2X?utm_source=share&utm_medium=member_desktop
+            " target="_blank">Tanmay ghosh</a>
+            <i class="fab fa-github"></i>
+            <a href="https://github.com/Tanmay-coderr" target="_blank">Tanmay-coderr</a>
+          </p>
+          <p class="about">I am an aspiring software develepor who is looking to contribute to open sourse projects.</p>
+          <div class="resources">
+            <p>3 Useful Dev Resources</p>
+            <ul>
+              <li>
+                <a href="https://daily.dev/" target="_blank" title="First Resource">Daily Dev</a>
+              </li>
+              <li>
+                <a href="https://wellfound.com/jobs" target="_blank" title="Second Resource">Internships</a>
+              </li>
+              <li>
+                <a href="https://monkeytype.com/" target="_blank" title="Third resource">Typing speed</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+        <!-- ________ tanmay Contributor card END ________  -->
+
+        
 
         <!-- ________ Saqib's Contributor card START ________  -->
         <div class="card">
