add ZerubbabelT card info

--- a/index.html
+++ b/index.html
@@ -114,6 +114,33 @@
           </div>
         </div>
         <!-- ________ *TEMPLATE* Contributor card END ________  -->
+        
+        <!-- ________ Zerubbabel's Contributor card START ________  -->
+        <div class="card">
+          <p class="name">Zerubbabel Tesfaye</p>
+          <p class="contact">
+            <i class="fab fa-x-twitter"></i>
+            <a href="https://www.twitter.com/zerut16" target="_blank">zerut16</a>
+            <i class="fab fa-github"></i>
+            <a href="https://www.github.com/ZerubbabelT" target="_blank">ZerubbabelT</a>
+          </p>
+          <p class="about">Full-stack Developer</p>
+          <div class="resources">
+            <p>3 Useful Dev Resources</p>
+            <ul>
+              <li>
+                <a href="https://chatgpt.com" target="_blank" title="AI assitant">Chatgpt</a>
+              </li>
+              <li>
+                <a href="https://stackoverflow.com/" target="_blank" title="Community">Stackover flow</a>
+              </li>
+              <li>
+                <a href="https://github.com" target="_blank" title="Version Control">Github</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+        <!-- ________ Zerubbabel's Contributor card END ________  -->
 
         <!-- lhcee3's Contributor card START-->
         <div class="card">
