added a new card

--- a/index.html
+++ b/index.html
@@ -115,6 +115,37 @@
         </div>
         <!-- ________ *TEMPLATE* Contributor card END ________  -->
 
+        <!-- Ehtiram's Contributor card START-->
+        <div class="card">
+          <p class="name">Ehtiram</p>
+          <p class="contact">
+            <i class="fab fa-linkedin"></i>
+            <a href="https://www.linkedin.com/in/ehtiram-ullah-92084a319/" target="_blank">Ehtiram</a>
+            <i class="fab fa-github"></i>
+            <a href="https://github.com/Ehtiram-Ullah" target="_blank">ehtiram-ullah</a>
+          </p>
+          <p class="about">I'm a passionate Cross-Platform Developer specializing in Flutter, always eager to learn, grow, and connect with like-minded individuals. Let's collaborate, share knowledge, and make great things happen together!</p>
+          <div class="resources">
+            <p>3 Useful Dev Resources</p>
+            <ul>
+              <li>
+                <a href="https://www.udemy.com/" target="_blank" title="First Resource">Udemy (Online Courses)</a>
+              </li>
+              <li>
+                <a href="https://dribbble.com/" target="_blank" title="Second Resource">Dribbble (Design Inspirations)</a>
+              </li>
+              <li>
+                <a href="https://mycolor.space/" target="_blank" title="Third resource">
+                  MyColor (Color Scheme Generator Based on Your Primary Color)
+                </a>
+              </li>
+            </ul>
+          </div>
+        </div>
+        <!-- Ehtiram's Contributor card END-->
+
+
+
         <!-- lhcee3's Contributor card START-->
         <div class="card">
           <p class="name">Aneesh</p>
