shashi kumar kasturi's card

--- a/index.html
+++ b/index.html
@@ -115,6 +115,33 @@
         </div>
         <!-- ________ *TEMPLATE* Contributor card END ________  -->
 
+        <!-- ________ shashi kumar kasturi's Contributor card START ________  -->
+        <div class="card">
+          <p class="name">Shashi Kumar kasturi</p>
+          <p class="contact">
+            <i class="fab fa-linkedin"></i>
+            <a href="https://www.linkedin.com/in/shashikumarkasturi/" target="_blank">shashikumarkasturi</a>
+            <i class="fab fa-github"></i>
+            <a href="https://github.com/kshashikumar" target="_blank">kshashikumar</a>
+          </p>
+          <p class="about">Tech Enthusiast and driven Full Stack software engineer crafting robust and innovative solutions. Proficient in a diverse set of technologies. <a href="https://www.shashikumarkasturi.me/" target="_blank">www.shashikumarkasturi.me</a></p>
+          <div class="resources">
+            <p>3 Useful Dev Resources</p>
+            <ul>
+              <li>
+                <a href="https://devpost.com/" target="_blank" title="Dev Post">Dev Post</a>
+              </li>
+              <li>
+                <a href="https://dev.to/" target="_blank" title="Dev Community">Dev Community</a>
+              </li>
+              <li>
+                <a href="https://daily.dev/" target="_blank" title="Daily Dev">Daily Dev</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+        <!-- ________ shashi kumar kasturi's Contributor card END ________  -->
+
         <!-- lhcee3's Contributor card START-->
         <div class="card">
           <p class="name">Aneesh</p>
