--- a/index.html
+++ b/index.html
@@ -119,7 +119,30 @@
             </ul>
           </div>
         </div>
-        
+         <div class="card">
+          <p class="name">Harsh Raj</p>
+          <p class="contact">
+            <i class="fab fa-x-twitter"></i>
+            <a href="https://www.twitter.com/your_user_handle" target="_blank">Your handle</a>
+            <i class="fab fa-github"></i>
+            <a href="https://github.com/infinity-30-03" target="_blank">infinity-30-03</a>
+          </p>
+          <p class="about">Hello, guys! 👋 I am Harsh Raj from India 🌍, and I am a web developer 💻. I'm very excited to start my first
+            GitHub contribution 🚀.</p>
+          <div class="resources">
+            <p>3 Useful Dev Resources</p>
+            <ul>
+              <li>
+                <a href=""https://youtu.be/EerdGm-ehJQ?si=eF_cjMWIowB42k1U" target="_blank" title="First Resource">Great Resource to learn JavaScript</a>
+              </li>
+              <li>
+                <a href="https://youtu.be/G3e-cpL7ofc?si=lkgWBnxPCYeGjwr7" target="_blank" title="Second Resource">Great start to HTML &amp; CSS language</a>
+              </li>
+              <li>
+                <a href="https://www.youtube.com/@LoveBabbar" target="_blank" title="Third resource"> A great YouTube channel for DSA using C++</a>
+              </li>
+            </ul>
+          </div>
         <div class="card">
           <p class="name">Meran Ahsan</p>
           <p class="contact">
