My First Contribution
Please Merge My Contribution

--- a/index.html
+++ b/index.html
@@ -121,14 +121,14 @@
         </div>
         
         <div class="card">
-          <p class="name">Meran Ahsan</p>
+          <p class="name">subham</p>
           <p class="contact">
             <i class="fab fa-x-twitter"></i>
             <a href="https://x.com/Ahsancodes" target="_blank">Ahsancodes</a>
             <i class="fab fa-github"></i>
-            <a href="https://github.com/meran-ahsan" target="_blank">meran-ahsan</a>
+            <a href="https://github.com/Ytshubham" target="_blank">subham</a>
           </p>
-          <p class="about">I'm Meran and i'm a student learning coding and this is my first github contribution.</p>
+          <p class="about">I'm subham and i'm a student learning coding and this is my first github contribution.</p>
           <div class="resources">
             <p>3 Useful Dev Resources</p>
             <ul>
