My First Contribution

--- a/index.html
+++ b/index.html
@@ -119,15 +119,15 @@
             </ul>
           </div>
         </div>
-         <div class="card">
-          <p class="name">aditya kumar</p>
+  <div class="card">
+          <p class="name">Sanjana Kumari</p>
           <p class="contact">
             <i class="fab fa-x-twitter"></i>
             <a href="https://www.twitter.com/your_user_handle" target="_blank">Your handle</a>
             <i class="fab fa-github"></i>
-            <a href="https://github.com/aditya-kumar426/" target="_blank">aditya-kumar426</a>
+            <a href="https://github.com/Sanjana9837" target="_blank">Sanjana9837</a>
           </p>
-          <p class="about">Hello, guys! 👋 I am aditya  from India 🌍, and I am a web developer 💻. I'm very excited to start my first
+          <p class="about">Hello, guys! 👋 I am Sanajana Kumari from India , and I am a first year BTECH Student At National Institute Of Advanced Manfucturing Technology. I'm very excited to start my first
             GitHub contribution 🚀.</p>
           <div class="resources">
             <p>3 Useful Dev Resources</p>
@@ -143,7 +143,7 @@
               </li>
             </ul>
           </div>
-
+        </div>
          <div class="card">
           <p class="name">YOUR NAME</p>
           <p class="contact">
