--- a/index.html
+++ b/index.html
@@ -114,6 +114,125 @@
           </div>
         </div>
         <!-- ________ *TEMPLATE* Contributor card END ________  -->
+
+        <!-- ________ *TEMPLATE: MAKE A COPY* Contributor card START ________  -->
+        <div class="card">
+          <p class="name">Timon-D3v</p>
+          <p class="contact">
+            <i class="fab fa-x-instagram"></i>
+            <a href="https://www.instagram.com/timon.dev/" target="_blank">@timon.dev</a>
+            <i class="fab fa-github"></i>
+            <a href="https://github.com/Timon-D3v" target="_blank">@Timon-D3v</a>
+          </p>
+          <p class="about">
+            Hi, I am a webdeveloper from switzerland and I try to do more open source. I have built some websites:
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+BEGIN HERE
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+            
+              <ul>
+                <li>
+                  <a href="https://www.timondev.com" target="_blank">Portfolio</a>
+                </li>
+                <li>
+                  <a href="https://www.sofareinigung-zuerich.ch">Sofareinigung Zürich</a>
+                </li>
+                <li>
+                  <a href="https://www.zurich-meets-tanzania.com">Zurich meets Tanzania</a>
+                </li>
+              </ul>
+            And even my own javascript framework <a></a>
+          </p>
+          <div class="resources">
+            <p>3 Useful Dev Resources</p>
+            <ul>
+              <li>
+                <a href="#" target="_blank" title="First Resource">Resource 1</a>
+              </li>
+              <li>
+                <a href="#" target="_blank" title="Second Resource">Resource 2</a>
+              </li>
+              <li>
+                <a href="#" target="_blank" title="Third resource">Resource 3</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+        <!-- ________ *TEMPLATE* Contributor card END ________  -->
+        
         <!-- ________ *TEMPLATE: MAKE A COPY* Contributor card START ________  -->
         <div class="card">
           <p class="name">Ishan Jadhao</p>
