--- a/index.html
+++ b/index.html
@@ -119,114 +119,37 @@
         <div class="card">
           <p class="name">Timon-D3v</p>
           <p class="contact">
-            <i class="fab fa-x-instagram"></i>
+            <i class="fa-brands fa-instagram"></i>
             <a href="https://www.instagram.com/timon.dev/" target="_blank">@timon.dev</a>
             <i class="fab fa-github"></i>
             <a href="https://github.com/Timon-D3v" target="_blank">@Timon-D3v</a>
           </p>
           <p class="about">
             Hi, I am a webdeveloper from switzerland and I try to do more open source. I have built some websites:
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-BEGIN HERE
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-            
               <ul>
                 <li>
                   <a href="https://www.timondev.com" target="_blank">Portfolio</a>
                 </li>
                 <li>
-                  <a href="https://www.sofareinigung-zuerich.ch">Sofareinigung Zürich</a>
+                  <a href="https://www.sofareinigung-zuerich.ch" target="_blank">Sofareinigung Zürich</a>
                 </li>
                 <li>
-                  <a href="https://www.zurich-meets-tanzania.com">Zurich meets Tanzania</a>
+                  <a href="https://www.zurich-meets-tanzania.com" target="_blank">Zurich meets Tanzania</a>
                 </li>
               </ul>
-            And even my own javascript framework <a></a>
+            And even my own javascript framework <a hreF="https://www.npmjs.com/package/timonjs" target="_blank">timon.js</a>
           </p>
           <div class="resources">
             <p>3 Useful Dev Resources</p>
             <ul>
               <li>
-                <a href="#" target="_blank" title="First Resource">Resource 1</a>
+                <a href="https://www.npmjs.com/package/timonjs" target="_blank" title="My own javascript framework">jQuery like javascript framework, but with all the native functions for each element</a>
               </li>
               <li>
-                <a href="#" target="_blank" title="Second Resource">Resource 2</a>
+                <a href="https://shoelace.style" target="_blank" title="Shoelace">A clean and easy to use design component library</a>
               </li>
               <li>
-                <a href="#" target="_blank" title="Third resource">Resource 3</a>
+                <a href="https://app.haikei.app" target="_blank" title="haikei">Generate awsome SVG's</a>
               </li>
             </ul>
           </div>
