# Fine tuned my card a bit

--- a/index.html
+++ b/index.html
@@ -117,27 +117,15 @@
 
         <!-- ________ *TEMPLATE: MAKE A COPY* Contributor card START ________  -->
         <div class="card">
-          <p class="name">Timon-D3v</p>
+          <p class="name">Timon Fiedler</p>
           <p class="contact">
             <i class="fa-brands fa-instagram"></i>
             <a href="https://www.instagram.com/timon.dev/" target="_blank">@timon.dev</a>
             <i class="fab fa-github"></i>
-            <a href="https://github.com/Timon-D3v" target="_blank">@Timon-D3v</a>
+            <a href="https://github.com/Timon-D3v" target="_blank">Timon-D3v</a>
           </p>
           <p class="about">
-            Hi, I am a webdeveloper from switzerland and I try to do more open source. I have built some websites:
-              <ul>
-                <li>
-                  <a href="https://www.timondev.com" target="_blank">Portfolio</a>
-                </li>
-                <li>
-                  <a href="https://www.sofareinigung-zuerich.ch" target="_blank">Sofareinigung Zürich</a>
-                </li>
-                <li>
-                  <a href="https://www.zurich-meets-tanzania.com" target="_blank">Zurich meets Tanzania</a>
-                </li>
-              </ul>
-            And even my own javascript framework <a hreF="https://www.npmjs.com/package/timonjs" target="_blank">timon.js</a>
+            Hi, I am a webdev from Switzerland and I try to do more open source. I have built some websites like <a href="https://www.timondev.com" target="_blank">my portfolio</a>, <a href="https://www.sofareinigung-zuerich.ch" target="_blank">Sofareinigung Zürich</a> and <a href="https://www.zurich-meets-tanzania.com" target="_blank">Zurich meets Tanzania</a>. I've also built my own javascript framework <a href="https://www.npmjs.com/package/timonjs" target="_blank">timon.js</a>.
           </p>
           <div class="resources">
             <p>3 Useful Dev Resources</p>
