--- a/index.html
+++ b/index.html
@@ -114,6 +114,35 @@
           </div>
         </div>
         <!-- ________ *TEMPLATE* Contributor card END ________  -->
+
+
+        <!-- ________ *TEMPLATE: MAKE A COPY* Contributor card START ________  -->
+        <div class="card">
+          <p class="name">MartianCactus</p>
+          <p class="contact">
+            <i class="fa-brands fa-google"></i>
+            <a href="https://www.google.com" target="_blank">dont use twitter lol</a>
+            <i class="fab fa-github"></i>
+            <a href="https://github.com/MartianCactus" target="_blank">MartianCactus</a>
+          </p>
+          <p class="about">guy learning stufff</p>
+          <div class="resources">
+            <p>3 Useful Dev Resources</p>
+            <ul>
+              <li>
+                <a href="#" target="_blank" title="First Resource">idk 1</a>
+              </li>
+              <li>
+                <a href="#" target="_blank" title="Second Resource">idk 2</a>
+              </li>
+              <li>
+                <a href="#" target="_blank" title="Third resource">idk 3</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+        <!-- ________ *TEMPLATE* Contributor card END ________  -->
+
         <!-- ________ *TEMPLATE: MAKE A COPY* Contributor card START ________  -->
         <div class="card">
           <p class="name">Ishan Jadhao</p>
