--- a/index.html
+++ b/index.html
@@ -88,27 +88,55 @@
         <!-- ==================  TEMPLATE  ================== -->
         <!-- DO NOT modify the TEMPLATE directly, make a copy and paste it below -->
 
+          <!-- ________ *TEMPLATE: MAKE A COPY* Contributor card START ________  -->
+          <div class="card">
+            <p class="name">Your name</p>
+            <p class="contact">
+              <i class="fab fa-x-twitter"></i>
+              <a href="https://www.twitter.com/your_user_handle" target="_blank">Your handle</a>
+              <i class="fab fa-github"></i>
+              <a href="https://www.github.com/your_user_handle" target="_blank">Your handle</a>
+            </p>
+            <p class="about">about you</p>
+            <div class="resources">
+              <p>3 Useful Dev Resources</p>
+              <ul>
+                <li>
+                  <a href="#" target="_blank" title="First Resource">Resource 1</a>
+                </li>
+                <li>
+                  <a href="#" target="_blank" title="Second Resource">Resource 2</a>
+                </li>
+                <li>
+                  <a href="#" target="_blank" title="Third resource">Resource 3</a>
+                </li>
+              </ul>
+            </div>
+          </div>
+          <!-- ________ *TEMPLATE* Contributor card END ________  -->
+
+
         <!-- ________ *TEMPLATE: MAKE A COPY* Contributor card START ________  -->
         <div class="card">
-          <p class="name">Your name</p>
+          <p class="name">Lewis Moruri</p>
           <p class="contact">
             <i class="fab fa-x-twitter"></i>
-            <a href="https://www.twitter.com/your_user_handle" target="_blank">Your handle</a>
+            <a href="https://www.twitter.com/Lewismoruri" target="_blank">@Lewismoruri</a>
             <i class="fab fa-github"></i>
-            <a href="https://www.github.com/your_user_handle" target="_blank">Your handle</a>
+            <a href="https://www.github.com/Lewismoruri" target="_blank">@Lewismoruri</a>
           </p>
-          <p class="about">about you</p>
+          <p class="about">Hi. My name is Lewis. I'm from Kenya .I'm a university graduate and this is my first attempt to join the open-source community. I love learning new skills, connecting with new people and community.</p>
           <div class="resources">
             <p>3 Useful Dev Resources</p>
             <ul>
               <li>
-                <a href="#" target="_blank" title="First Resource">Resource 1</a>
+                <a href="https://v2.scrimba.com/learn-react-c0e" target="_blank" title="First Resource">Learn React</a>
               </li>
               <li>
-                <a href="#" target="_blank" title="Second Resource">Resource 2</a>
+                <a href="https://www.w3schools.com/" target="_blank" title="Second Resource">w3schools</a>
               </li>
               <li>
-                <a href="#" target="_blank" title="Third resource">Resource 3</a>
+                <a href="https://stackoverflow.com/" target="_blank" title="Third resource">Stackoverflow</a>
               </li>
             </ul>
           </div>
