--- a/index.html
+++ b/index.html
@@ -643,6 +643,34 @@
         <!-- DO NOT modify the TEMPLATE directly, make a copy and paste it below -->
         <!-- Keep one line of space above and below your card -->
         <!-- ========= Paste YOUR CARD directly BELOW this line ========= -->
+
+         <!-- ________ Julia Contributor card START ________  -->
+        <div class="card">
+          <p class="name">Julia</p>
+          <p class="contact">
+            <i class="fa-brands fa-linkedin"></i>
+            <a href="https://www.linkedin.com/in/julia-brand-430628293/" target="_blank">Julia Brand</a>
+            <i class="fab fa-github"></i>
+            <a href="https://github.com/j1bb1e" target="_blank">j1bb1e</a>
+          </p>
+          <p class="about">Hi! I am Julia and I am from New Jersey. I have been coding since 2019 but am only learning how to use github now in 2024.</p>
+          <div class="resources">
+            <p>3 Useful Dev Resources</p>
+            <ul>
+              <li>
+                <a href="https://chatgpt.com/" target="_blank" title="Ask any questions">ChatGPT</a>
+              </li>
+              <li>
+                <a href="https://github.com/" target="_blank" title="ontribute to open source projects ">Github</a>
+              </li>
+              <li>
+                <a href="#" target="_blank" title="Third resource">Resource 3</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+        <!-- ________ Julia Contributor card END ________  -->
+
         <!-- ________ *TEMPLATE: Warren Smith START ________  -->
         <div class="card">
           <p class="name">Warren Smith</p>
