--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
         </div>
         <!-- ________ *TEMPLATE* Contributor card END ________  -->
 
-
+                <!-- ________ *TEMPLATE* Contributor card END ________  -->
                 <div class="card">
                   <p class="name">KrakenM</p>
                   <p class="contact">
