--- a/index.html
+++ b/index.html
@@ -114,6 +114,33 @@
           </div>
         </div>
         <!-- ________ *TEMPLATE* Contributor card END ________  -->
+ <!-- ================================================ -->
+        <!-- ________ kelseadecker START ________  -->
+        <div class="card">
+          <p class="name">Kelsea Decker</p>
+          <p class="contact">
+            <i class="fab fa-x-twitter"></i>
+            <a href="https://www.twitter.com/your_user_handle" target="_blank">Your handle</a>
+            <i class="fab fa-github"></i>
+            <a href="https://www.github.com/your_user_handle" target="_blank">Your handle</a>
+          </p>
+          <p class="about">Hello! My name is Kelsea and I am a beginner Full Stack Web Developer. I got my certification about a year ago. Other than figuring out technology I play music and have been for 19 years.</p>
+          <div class="resources">
+            <p>3 Useful Dev Resources</p>
+            <ul>
+              <li>
+                <a href="https://www.freecodecamp.org/" target="_blank" title="First Resource">Free Code Camp</a>
+              </li>
+              <li>
+                <a href="https://www.w3schools.com/" target="_blank" title="Second Resource">W3 Schools</a>
+              </li>
+              <li>
+                <a href="https://codesandbox.io/" target="_blank" title="Third resource">Code Sand Box</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+        <!-- ________ kelseadecker card END ________  -->
 
         <!-- ________ marshallhhhh Contributor card START ________  -->
         <div class="card">
