--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
             <i class="fab fa-x-twitter"></i>
             <a href="https://www.twitter.com/your_user_handle" target="_blank">Your handle</a>
             <i class="fab fa-github"></i>
-            <a href="https://www.github.com/your_user_handle" target="_blank">Your handle</a>
+            <a href="https://www.github.com/kelseadecker" target="_blank">kelseadecker</a>
           </p>
           <p class="about">Hello! My name is Kelsea and I am a beginner Full Stack Web Developer. I got my certification about a year ago. Other than figuring out technology I play music and have been for 19 years.</p>
           <div class="resources">
